--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": ">= 2.3.11",
     "jade": ">= 0.12.3",
     "socket.io": ">= 0.7.2",
-    "stylus": ">= 0.13.4"
+    "stylus": ">= 0.13.4",
+    "mysql": ">= 2.0.0-alpha2"
   },
   "licenses": [ {
     "type": "MIT",
